god damn ubuntu! day2 nearly all time i spend was for Ubuntu power off which was accidentially i'm sure i was pressed cancel but i shut down. Then IDEA indexing, synchronizing VCS stucked then invalidate caches, optimizing RAM usage vs. markdown editor problem, new markdown editor and other god damned things.